[tool.poetry]
name = "python-stats"
version = "0.1.0"
description = ""
authors = ["LydiaFrance <lfrance@turing.ac.uk>"]
readme = "README.md"
packages = [{include = "python_stats"}]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.6.2"
pandas = "^1.5.1"
numpy = "^1.23.4"
palmerpenguins = "^0.1.4"
ipykernel = "^6.17.1"
seaborn = "^0.12.1"
scipy = "^1.9.3"
sci-analysis = "^2.2.1"
statsmodels = "^0.13.5"
scikit-learn = "^1.1.3"
pymer4 = "^0.7.8"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
